--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
+
     <title>AluraGeek</title>
   </head>
   <body>
-    <header>
-        Hola mundo
+    <header class="navbar">
+        <div class="items">
+            <p>AluraGeek</p>
+        </div>
+        <div class="items">
+            <button class="btn">Agregar</button>
+        </div>
+        
     </header>
+    <main class="centrar__row informacion__principal">
+      <h1>Nuestros productos: </h1>  
+    </main>
   </body>
 </html>
