add style to cards

--- a/index.html
+++ b/index.html
@@ -13,7 +13,48 @@
     </header>
     <main class="informacion__principal">
       <section class="productos">
-        <h1>Nuestros productos:</h1>
+        <h1>Tus productos:</h1>
+        <div class="card">
+          <img src="./img.jpg"/>
+          <div class="card-container--info">
+            <p>Atencion al cliente</p>
+            <div class="card-container--value">
+              <p>$0.00</p>
+              <img src="./trash.png"/>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://www.soyvisual.org/sites/default/files/styles/twitter_card/public/images/photos/yo.jpg?itok=0ZTbftkv"/>
+          <div class="card-container--info">
+            <p>Atencion al cliente</p>
+            <div class="card-container--value">
+              <p>$0.00</p>
+              <img src="./trash.png"/>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://pymstatic.com/4318/conversions/ello-yo-superyo-wide.jpg"/>
+          <div class="card-container--info">
+            <p>Atencion al cliente</p>
+            <div class="card-container--value">
+              <p>$0.00</p>
+              <img src="./trash.png"/>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://assetsio.gnwcdn.com/spider-man-remastered-pc.jpg?width=1200&height=1200&fit=crop&quality=100&format=png&enable=upscale&auto=webp"/>
+          <div class="card-container--info">
+            <p>Atencion al cliente</p>
+            <div class="card-container--value">
+              <p>$0.00</p>
+              <img src="./trash.png"/>
+            </div>
+          </div>
+        </div>
+        
       </section>
     </main>
   </body>
