--- a/index.html
+++ b/index.html
@@ -122,5 +122,6 @@
         <p>Desarrollado por Omar Rodríguez</p>
       </div>
     </footer>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
