--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
               class="campo__completo"
               type="text"
               required
+              minlength="5"
               placeholder="nombre..."
             />
             <span class="mensaje-error"></span>
